; ModuleID = '/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/extr_oslist.c_CopyString.c'
source_filename = "/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/extr_oslist.c_CopyString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TAG_STRING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @CopyString to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @CopyString(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %22

8:                                                ; preds = %1
  %9 = load i32*, i32** %3, align 8
  %10 = call i64 @strlen(i32* %9)
  %11 = add nsw i64 %10, 1
  %12 = load i32, i32* @TAG_STRING, align 4
  %13 = call i32* @FrLdrHeapAlloc(i64 %11, i32 %12)
  store i32* %13, i32** %4, align 8
  %14 = load i32*, i32** %4, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %16, label %20

16:                                               ; preds = %8
  %17 = load i32*, i32** %4, align 8
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @strcpy(i32* %17, i32* %18)
  br label %20

20:                                               ; preds = %16, %8
  %21 = load i32*, i32** %4, align 8
  store i32* %21, i32** %2, align 8
  br label %22

22:                                               ; preds = %20, %7
  %23 = load i32*, i32** %2, align 8
  ret i32* %23
}

declare dso_local i32* @FrLdrHeapAlloc(i64, i32) #1

declare dso_local i64 @strlen(i32*) #1

declare dso_local i32 @strcpy(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
